tests/baselines/reference/unusedPrivateVariableInClass4.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass4.ts(3,13): error TS6133: 'y' is declared but its value is never read.


==== tests/cases/compiler/unusedPrivateVariableInClass4.ts (1 errors) ====
    class greeter {
        private x: string;
        private y: string;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        public  z: string;
    
        public method1() {
            this.x;
        }
    }